--- a/src/Sections/AboutUs.css
+++ b/src/Sections/AboutUs.css
@@ -1,12 +1,11 @@
 /* Section */
 .about{
-    width: 90%;
     border-radius: 32px;
     box-shadow: var(--shadow-l);
     justify-self: center;
     background-color: var(--bg-dark-2);
     padding: 32px clamp(8px, calc(5vw + 8px), 128px) 64px;
-    margin: 64px;
+    margin: clamp(8px, calc(5vw + 8px), 64px);
 }
 
 /* Internal Flexbox */
