--- a/src/Sections/Activities.css
+++ b/src/Sections/Activities.css
@@ -1,5 +1,4 @@
 .activities{
-    width: 90vw;
     justify-self: center;
     background-color: var(--bg-dark-2);
     border-radius: 32px;
@@ -10,7 +9,7 @@
     align-items: center;
     flex-direction: column;
     
-    margin: 32px 0 128px;
+    margin: 32px clamp(8px, calc(5vw + 8px), 64px) 128px;
     padding: 64px clamp(8px, calc(5vw + 8px), 128px);
 }
 
