--- a/src/global.css
+++ b/src/global.css
@@ -53,8 +53,3 @@ a:hover{
 a:visited{
     text-decoration: none;
 }
-
-/* .app{
-    display: grid;
-    background-color: var(--bg-dark-1);
-} */
